<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="report">Report</string>
    <string name="entry">Entry</string>
    <string name="quit">Quit</string>
    <string name="correction">Correction</string>
    <string name="title_activity_entry">Entry</string>
    <string name="other">Other</string>

</resources>
